search and filter done

--- a/src/app/Components/card/card.component.css
+++ b/src/app/Components/card/card.component.css
@@ -3,7 +3,7 @@
 
 
 .card {
-    width: 380px;
+    width: 320px;
     height: 100%;
     background-color: white;
     border-radius: 8px;
@@ -22,9 +22,9 @@
 }
 
 .card h4 {
-    font-size: 1rem;
-    font-weight: 600;
-    color: var(--secondary-gray);
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: var(--primary-midnight);
     margin-block-end: 1rem;
 }
 
@@ -60,3 +60,9 @@
 
 }
 
+
+@media screen and (max-width:375px) {
+   .card h4 {
+    font-size: 1.2rem;
+   }
+}
