--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
     --primary-light-violet:  #939BF4;
     --primary-very-dark-blue: #19202D;
     --primary-midnight: #121721;
+    --primary-default-2:#dcdef8;
 
     --secondary-white: #FFFFFF;
     --secondary-light-grey: #F4F6F8;
