--- a/src/app/Components/card/card.component.css
+++ b/src/app/Components/card/card.component.css
@@ -3,7 +3,7 @@
 
 
 .card {
-    width: 320px;
+    width: 370px;
     height: 100%;
     background-color: white;
     border-radius: 8px;
@@ -66,3 +66,23 @@
     font-size: 1.2rem;
    }
 }
+
+@media screen and (max-width:768px) {
+    .card {
+        width: 290px;
+        height: 100%;
+    }
+
+    .card h4 {
+        font-size: 1rem;
+    }
+
+    .time span {
+        font-size: .9rem;
+    }
+
+    .location p {
+        font-size: .8rem;
+    }
+}
+
