dark theme done

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper">
     <div class="container">
         <img src="../../../assets/logo.svg" alt="">
-        <div class="toggle">
-            <img src="../../../assets/icon-sun.svg" alt="">
-            <ion-icon name="toggle-outline"></ion-icon>
-            <img src="../../../assets/icon-moon.svg" alt="">
+        <div class="toggle" (click)="toggleTheme()">
+            <img src="../../../assets/icon-sun.svg" alt="" *ngIf="theme === 'light-theme'">
+            <ion-icon name="toggle" *ngIf="theme === 'light-theme'"></ion-icon>
+            <img src="../../../assets/icon-moon.svg" alt="" *ngIf="theme === 'dark-theme'">
         </div>
     </div>
 </div>
