--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-<div class="container">
-  <app-header></app-header>
+<div class="container" >
+  <app-header (switchTheme)="toggleTheme()"></app-header>
   <router-outlet></router-outlet>
 </div>
 
