--- a/src/app/Components/card/card.component.css
+++ b/src/app/Components/card/card.component.css
@@ -5,7 +5,7 @@
 .card {
     width: 370px;
     height: 100%;
-    background-color: white;
+    background-color: var(--card-background-color);
     border-radius: 8px;
     padding: 4rem 2rem;
 }
@@ -17,20 +17,20 @@
 }
 
 .time span {
-    color: var(--secondary-gray);
+    color: var(--text-color);
     font-size: 1.2rem;
 }
 
 .card h4 {
     font-size: 1.2rem;
     font-weight: 700;
-    color: var(--primary-midnight);
+    color: var(--position-color);
     margin-block-end: 1rem;
 }
 
 .card p {
     margin-block-end: 1rem;
-    color: var(--secondary-gray);
+    color: var(--text-color);
 }
 
 .location p {
