--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -42,8 +42,13 @@
                 
             
     
+            
+        </div>
+
+        <div class="butotn">    
             <button class="btn" >Load More</button>
         </div>
+        
         
     
     
