--- a/src/app/Pages/details/details.component.css
+++ b/src/app/Pages/details/details.component.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-    background-color: white;
+    background-color: var(--card-background-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -22,11 +22,10 @@
 
 .background {
    width: 100px;
-   height: 100%;
+   height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
-   padding-block: 2.8rem;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
 }
@@ -38,11 +37,22 @@
     gap: .2rem;
 }
 
+.company-names h4 {
+    color: var(--heading-text);
+}
+
+.company-names p {
+    color: var(--text-color);
+}
+
+
+
 .job-details {
     margin-block: 3rem;
-    background-color: white;
+    background-color: var(--card-background-color);
     padding: 1.5rem 2rem;
     border-radius: 5px;
+    
 }
 
 .site {
@@ -52,8 +62,8 @@
     cursor: pointer;
     outline: none;
     border: none;
-    color: var(--primary-violet);
-    background-color: var(--primary-default-2);
+    color: var(--site-color);
+    background-color: var(--site-background);
     font-weight: 600;
     border-radius: 3px;
 }
@@ -72,11 +82,11 @@
 }
 
 .job-details .job-heading .heading span {
-    color: var(--secondary-gray);
+    color:var(--text-color)
 }
 
 .job-details .job-heading .heading h3 {
-    color: var(--primary-midnight);
+    color: var(--heading-text);
     font-size: 2rem;
 }
 
@@ -99,27 +109,27 @@
 }
 
 .job-content {
-    color: var(--secondary-gray);
+    color:var(--text-color);
     font-size: .9rem;
     line-height: 1.7;
 }
 
 .requirements h2 {
     margin-block: 2rem;
-    color: var(--primary-midnight);
+    color: var(--heading-text);
 }
 
 .requirements ul, ol {
     padding-inline: 1rem;
-    line-height: 1.7;
+    line-height: 2;
     margin-block-start: 2rem;
-    color: var(--secondary-gray);
+    color:var(--text-color);
     font-size: .9rem;
 }
 
 .requirements p {
     line-height: 1.7;
-    color: var(--secondary-gray);
+    color:var(--text-color);
     font-size: .9rem;
 }
 
