--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
+    position: relative;
 }
 
 .cards {
@@ -8,6 +9,7 @@
     margin-block: 3rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .card {
@@ -17,19 +19,22 @@
 }
 
 .btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    margin-block: 2rem;
     padding: .5rem 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     border: none;
     outline: none;
     background-color: var(--primary-violet);
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+
 
 .wrapper {
     width: 100%;
@@ -43,7 +48,7 @@
     align-items: center;
     gap: 1rem;
     border-radius: 5px;
-    background-color: white;
+    background-color: var(--card-background-color);
     padding: 1rem;
 }
 
@@ -61,7 +66,7 @@
     outline: none;
     border: none;
     background-color: transparent;
-    border-right: 1px solid red;
+    border-right: 1px solid var(--text-color) ;
     cursor:pointer;
 }
 
@@ -72,9 +77,10 @@
     outline: none;
     border: none;
     background-color: transparent;
-    border-right: 1px solid red;
+    border-right: 1px solid var(--text-color)    ;
     cursor:pointer;
-
+    
+    
 }
 
 .input-filter {
@@ -95,6 +101,7 @@
 .input-filter .filter label {
     font-weight: 700;
     text-transform: capitalize;
+    color: var(--text-color);
 }
 
 .search-btn {
