--- a/src/app/Components/footer/footer.component.css
+++ b/src/app/Components/footer/footer.component.css
@@ -23,6 +23,10 @@
     font-weight: 600;
     border-radius: 5px;
 }
+
+.apply:hover {
+    background-color: #9ea4ff
+}
  
 .job-details {
     display: flex;
