--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -18,6 +18,10 @@
     gap: 2rem;
 }
 
+.card:hover {
+    cursor: pointer;
+}
+
 .btn {
     padding: .5rem 1rem;
     margin-top: 2rem;
@@ -34,7 +38,9 @@
     transform: translate(-50%, -50%);
 }
 
-
+.btn:hover {
+    background-color: #8990fc;
+}
 
 .wrapper {
     width: 100%;
@@ -114,6 +120,10 @@
     border-radius: 5px;
     font-weight: 500;
     cursor: pointer;
+}
+
+.search-btn:hover {
+    background-color: #8990fc;
 }
 
 .icon-placeholder {
