--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@ body {
       --primary-violet:  #5964E0;
       --heading-text:black;
       --site-background:#cfd3fd;
+      --site-background-hover:#a9aefd;
       --site-color:#5964E0;
 }
 
@@ -43,5 +44,6 @@ body {
     --text-color:#9DAEC2;
     --heading-text:white;
     --site-background:rgb(83, 83, 83);
+    --site-background-hover:rgb(69, 67, 67);
     --site-color:white
 }
