--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -48,6 +48,7 @@
 }
 
 .search-container {
+    position: relative;
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
@@ -130,6 +131,10 @@
     display: none;
 }
 
+.dropdown {
+    display: none;
+}
+
 
 /* MEDIA QUERY FOR TABLET SCREENS */
 
@@ -140,11 +145,117 @@
         width: 100%;
     }
 
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        
+    }
+
+    .overlay-active {
+        display: block;
+    }
+
+
+    .dropdown {
+        /* position: absolute;
+        top: 5%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+        width: 290px;
+        background-color: white;
+        display: block;
+        margin: 0 auto;
+        padding: 1rem;
+        border-radius: 8px;
+        z-index: 1000; */
+        position: fixed;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;  
+    }
+    .dropdown .backdrop {
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       z-index: 1000;
+       background-color: #4c4d636f;
+    }
+    
+    .dropdown-content {
+        width: 300px;
+        border-radius: 8px;
+        position: absolute;
+        z-index: 10000;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        background-color: var(--card-background-color);
+        overflow: hidden;
+        padding: 1.5rem;
+    }
+
+    .dropdown-content .dropdown-location {
+        display: block;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+    }
+
+    .dropdown-content .dropdown-location input {
+        width: 100%;
+        padding: 1rem .5rem;
+        font-size: .9rem;
+        outline: none;
+        border: none;
+        background-color: transparent;
+    }
+
+    .dropdown-content .dropdown-check  {
+        display: flex;
+        align-content: center;
+        gap: 1rem;
+        padding-block: .5rem;
+    }
+
+    .dropdown-content .dropdown-check label {
+        font-size: 1rem;
+        font-weight: 600;
+        color: var(--heading-text);
+    }
+
+    .dropdown-content .dropdown-search {
+        border: none;
+        outline: none;
+        background-color: var(--primary-violet);
+        color: white;
+        font-size: 1rem;
+        padding: 1rem 2rem;
+        border-radius: 5px;
+        font-weight: 500;
+        cursor: pointer;
+    }
+
     .search-container {
         margin-inline: 1rem;
         display: flex;
     }
 
+    
     .search-btn {
         display: none;
     }
@@ -173,6 +284,10 @@
         gap: 1.5rem;
     }
 
+
+    .icon-placeholder img {
+        cursor: pointer;
+    }
             
     .icon-placeholder ion-icon {
         width: 22px;
@@ -188,6 +303,7 @@
         width: 100%;
         place-items: center;
         padding: 1rem;
+        z-index: -10;
     }
 
     
