--- a/src/app/Components/header/header.component.css
+++ b/src/app/Components/header/header.component.css
@@ -18,9 +18,33 @@
 
 .toggle {
     display: flex;
-    gap: 1rem;
+    gap: .5rem;
     align-items: center;
 }
+
+.toggle-icon {
+    width: 40px;
+    height: 20px;
+    background-color: white;
+    border-radius: 20px;
+    padding: .5rem;
+    cursor: pointer;
+    position: relative;
+}
+
+.toggle-inside {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 10px;
+    height: 10px;
+    background-color: var(--primary-violet);
+    border-radius: 100%;
+    transition: left 0.3s ease; 
+}
+
+
+
 
 @media  screen and (max-width:375px) {
     .wrapper {
