--- a/src/app/Pages/details/details.component.html
+++ b/src/app/Pages/details/details.component.html
@@ -10,7 +10,7 @@
             </div>
             
         </div>
-        <button  class="site">Company Site</button>
+        <a class="site" href="{{job.website}}" target="_blank">Company Site</a>
     </div>
 
     
@@ -21,7 +21,7 @@
                 <h3>{{job.position}}</h3>
                 <p>{{job.location}}</p>
             </div>
-            <button class="apply">Apply Now</button>
+            <a class="apply" href="{{job.apply}}" target="_blank">Apply</a>
             
         </div>
 
