--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -4,6 +4,6 @@
             <h2>{{job.position}}</h2>
             <p>{{job.company}}</p>
         </div>
-        <button class="apply">Apply Now</button>
+        <a class="apply" href="{{job.apply}}" target="_blank">Apply</a>
     </div>
 </div>
