--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -61,13 +61,13 @@
     </div>
   </div>
 
-  <div class="cards">
-    <div class="card">
-      <app-card *ngFor="let job of searchedJobs" [job]="job"> </app-card>
+  <div class="cards" >
+    <div class="card" [@fadeInOut]>
+      <app-card *ngFor="let job of searchedJobs.slice(startIndex, endIndex)" [job]="job"> </app-card>
     </div>
   </div>
 
-  <div class="butotn">
-    <button class="btn">Load More</button>
+  <div class="butotn" *ngIf="showLoadMoreButton()" >
+    <button class="btn" (click)="loadMore()">Load More</button>
   </div>
 </div>
