responsive little touches

--- a/src/app/Components/card/card.component.css
+++ b/src/app/Components/card/card.component.css
@@ -1,62 +1,53 @@
-
-
-
-
 .card {
-    width: 370px;
-    height: 100%;
-    background-color: var(--card-background-color);
-    border-radius: 8px;
-    padding: 4rem 2rem;
-}
-
-.card:hover {
-    cursor: pointer;
-}
-
-.time {
+    width: 360px;
     display: flex;
-    gap: .5rem;
-    margin-block-end: 1rem;
+    flex-direction: column;
+    gap: 2rem;
+    padding-inline: 2rem;
+    border-radius: 8px;
+    background-color: var(--card-background-color);
 }
 
-.time span {
+.card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.card-container .card-info {
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+}
+
+.card-container .card-info .time span {
     color: var(--text-color);
+}
+
+.card-container .card-info h4 {
+    color: var(--heading-text);
     font-size: 1.2rem;
 }
 
-.card h4 {
-    font-size: 1.2rem;
-    font-weight: 700;
-    color: var(--position-color);
-    margin-block-end: 1rem;
-}
-
-.card h4:hover {
+.card-container .card-info p {
     color: var(--text-color);
 }
 
-
-.card p {
-    margin-block-end: 1rem;
-    color: var(--text-color);
-}
-
-.location p {
+.card-container .location {
     color: var(--primary-violet);
-    font-weight: 700;
+    font-weight: 600;
+    margin-block-end: 2rem;
 }
 
-.logo {
-    width: 50px;
-    height: 50px;
+.card .logo {
     border-radius: 10px;
     position: relative;
-    margin-inline: 2rem;
-    margin-bottom: -2rem;
+    width: 50px;
+    height: 50px;
+    margin-top: -1rem;
 }
 
-.logo img {
+.card .logo img {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -71,27 +62,31 @@
 
 
 @media screen and (max-width:375px) {
-   .card h4 {
-    font-size: 1.2rem;
-   }
-}
 
-@media screen and (max-width:768px) {
-    .card {
-        width: 290px;
-        height: 100%;
+
+
+    .card .card-container h4 {
+     font-size: 1rem;
     }
-
-    .card h4 {
-        font-size: 1rem;
-    }
-
-    .time span {
-        font-size: .9rem;
-    }
-
-    .location p {
-        font-size: .8rem;
-    }
-}
-
+ }
+ 
+ @media screen and (max-width:768px) {
+     .card {
+         width: 290px;
+         height: 100%;
+     }
+ 
+     .card h4 {
+         font-size: 1rem;
+     }
+ 
+     .time span {
+         font-size: .9rem;
+     }
+ 
+     .location p {
+         font-size: .8rem;
+     }
+ }
+ 
+ 
