--- a/src/app/Components/card/card.component.html
+++ b/src/app/Components/card/card.component.html
@@ -1,20 +1,23 @@
 
-    <div class="container" *ngIf="job" [routerLink]="'details/' + job.id" >
-
-        <div class="logo" [style.background-color]="job.logoBackground">
-            <img [src]=job.logo alt="">
-            
-        </div>
-        <div class="card">
-            <div class="time">
-                <span> {{job.postedAt}} . </span>
-                <span> {{job.contract}}</span>
+        <div class="card" *ngIf="job" [routerLink]="'details/' + job.id">
+            <div class="logo" [style.background-color]="job.logoBackground">
+                <img [src]=job.logo alt="">
             </div>
-            <h4>{{job.position}}</h4>
-            <p>{{job.company}}</p>
-            <div class="location">
-                <p>{{job.location}}</p>
+
+            <div class="card-container">
+                <div class="card-info">
+                    <div class="time">
+                        <span> {{job.postedAt}} . </span>
+                        <span> {{job.contract}}</span>
+                    </div>
+                    <h4>{{job.position}}</h4>
+                    <p>{{job.company}}</p>
+                </div>
+               
+                <div class="location">
+                    <p>{{job.location}}</p>
+                </div>
             </div>
         </div>
         
-    </div>
+
