responsive little touches

--- a/src/app/Components/header/header.component.css
+++ b/src/app/Components/header/header.component.css
@@ -46,7 +46,7 @@
 
 
 
-@media  screen and (max-width:375px) {
+@media  screen and (min-width:375px) and (max-width:768px){
     .wrapper {
         width: 100%;
         background-image: url('../../../assets/logos/Triangle.png');
