--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -142,7 +142,7 @@
 
 
 
-@media screen and (max-width:375px){
+@media screen and (min-width:375px) and (max-width:768px){
     
 
     .overlay {
@@ -253,6 +253,8 @@
     .search-container {
         margin-inline: 1rem;
         display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     
@@ -339,10 +341,11 @@
         font-size: .9rem;
     }
 
+
     .cards { 
         width: calc(100% - 2rem);
         margin: 0 auto;
-        margin-block: 2rem;
+        margin-block: 1rem;
     }
     
     
