--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -312,7 +312,7 @@
 
 
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:768px) and (max-width:1200px){
     .container {
         width: 100%;
     }
@@ -321,16 +321,23 @@
         width: calc(100% - 5rem);
         margin: 0 auto;
         display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .search-container .input .title {
-        width: 150px;
+        width: 300px;
         font-size: .9rem;
     }
     .search-container .input .location {
-        width: 150px;
+        width: 300px;
         font-size: .9rem;
     } 
+
+
+    .search-container .input-filter {
+        width: 400px;
+    }
    
     .search-container .input .filter label {
         font-size: .7rem ;
@@ -343,7 +350,7 @@
 
 
     .cards { 
-        width: calc(100% - 2rem);
+        width: calc(100% - 3rem);
         margin: 0 auto;
         margin-block: 1rem;
     }
