dropdown close button working

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -60,6 +60,7 @@
         </div>
 
         <button class="dropdown-search" (click)="search()">Search</button>
+        <ion-icon name="close" class="icon-close" (click) = "close()"></ion-icon>
       </div>
     </div>
   </div>
