--- a/src/app/Pages/home/home.component.css
+++ b/src/app/Pages/home/home.component.css
@@ -161,18 +161,6 @@
 
 
     .dropdown {
-        /* position: absolute;
-        top: 5%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        
-        width: 290px;
-        background-color: white;
-        display: block;
-        margin: 0 auto;
-        padding: 1rem;
-        border-radius: 8px;
-        z-index: 1000; */
         position: fixed;
         display: block;
         top: 0;
@@ -204,7 +192,6 @@
         justify-content: center;
         gap: 1rem;
         background-color: var(--card-background-color);
-        overflow: hidden;
         padding: 1.5rem;
     }
 
@@ -248,6 +235,16 @@
         border-radius: 5px;
         font-weight: 500;
         cursor: pointer;
+    }
+
+    .dropdown .icon-close {
+        color: white;
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-top: -2rem;
     }
 
     .search-container {
